issue_27: fixed app icon display on Linux
- svg app icons require a plugin to display on Linux
- switched over to using our png icon
- no real change to presentation, as our svg icon is just an embedded png

--- a/src/tego_ui/icons/icons.qrc
+++ b/src/tego_ui/icons/icons.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/icons">
-        <file>ricochet_refresh.svg</file>
+        <file>ricochet_refresh.png</file>
         <file>ricochet_icons.ttf</file>
     </qresource>
 </RCC>
